# rainfalls

./: .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
app/: constants.py  main.py
backend/: Dockerfile  models.py  pyproject.toml  utils.py
backend/app/: api_generator.py  constants.py  exporter.py  main.py  models.py  utils.py
backend/tests/: test_dataset_import.py  test_query.py  test_smoke.py
frontend/: .prettierignore  Dockerfile  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js  setupProxy.js  util.js
frontend/src/client/: _constants.json  index.ts  openapi.json
frontend/src/client/services/: DefaultApi.ts
frontend/src/components/: CheckboxDropdown.js  ComparisonView.js  GeoMap.js  GlobalScatter.js  GlobalTimeline.js  Header.js  HelloWorld.js  HelpModal.js  HistgramTimelineOverviewDetail.js  IntervalSelection.js  IntervalView.js  OutlierScatter.js  SpiderChart.js  Table.js  View.js  WindowManager.js  selectedTimeIntervalButton.js  selectedTimeIntervalList.js  selectedTimeIntervalListItem.js  toggleTimelineButton.js
frontend/src/components/filter/: Condition.js  Filter.js  FilterByDropdown.js  FilterChip.js  FilterModal.js  OpDropdown.js
frontend/src/helper/: ArrayMath.js
frontend/src/recoil/: atoms.js  selectors.js
