[tool.poetry]
name = "visual-analytics-gummistiefel-b"
version = "0.1.0"
description = ""
authors = ["max.paul.patzelt@student.hu-berlin.de"]
readme = "README.md"
packages = [{include = "visual_analytics_gummistiefel_b"}]

[tool.poetry.dependencies]
python = "^3.10"
aioredis = "^2.0.1"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
