[tool.poetry]
name = "visual-analytics-gummistiefel-b"
version = "0.1.0"
description = ""
authors = ["max.paul.patzelt@student.hu-berlin.de"]
readme = "README.md"
packages = [{include = "visual_analytics_gummistiefel_b"}]

[tool.poetry.dependencies]
python = "^3.10"
aioredis = "^2.0.1"
redis = {extras = ["hiredis"], version = "^4.4.0"}
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.9"}
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
