[tool.poetry]
name = "visual-analytics-gummistiefel-b"
version = "0.1.0"
description = ""
authors = ["max.paul.patzelt@student.hu-berlin.de"]
readme = "README.md"
packages = [{include = "visual_analytics_gummistiefel_b"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
black = "^22.12.0"
pre-commit = "^2.20.0"
pandas = "^1.5.2"
fastapi-cache2 = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
